<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">不支持BLE</string>
    <string name="label_data">通用数据:</string>
    <string name="batter_label_data">电池电量:</string>
    <string name="label_workmode_recv">工作状态:</string>
    <string name="dps310_label_data">DPS数据:</string>
    <string name="smokepower_label_data">当前功率:</string>
    <string name="smokeenergy_label_data">本次耗能:</string>
    <string name="usedenergy_label_data">累积耗能:</string>
    <string name="setgetpower_label_data">设定功率:</string>
    <string name="label_device_address">设备地址:</string>
    <string name="label_state">连接状态:</string>
    <string name="no_data">无数据</string>
    <string name="connected">设备已连接</string>
    <string name="disconnected">设备已断开</string>
    <string name="title_devices">设备扫描</string>
    <string name="error_bluetooth_not_supported">不支持BLE设备.</string>

    <string name="unknown_device">未知设备</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">连接设备</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止</string>
</resources>
