<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp">

         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/data_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <LinearLayout android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp">
                 <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/label_device_address"
                     android:textSize="18sp"/>
                 <Space android:layout_width="5dp"
                     android:layout_height="wrap_content"/>
                 <TextView android:id="@+id/device_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"/>
             </LinearLayout>
             <LinearLayout android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp">
                 <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/label_state"
                     android:textSize="18sp"/>
                 <Space android:layout_width="5dp"
                     android:layout_height="wrap_content"/>
                 <TextView android:id="@+id/connection_state"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/disconnected"
                     android:textSize="18sp"/>
             </LinearLayout>

             <LinearLayout android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp">
                 <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/label_data"
                     android:textSize="18sp"/>
                 <Space android:layout_width="5dp"
                     android:layout_height="wrap_content"/>
                 <TextView android:id="@+id/data_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/no_data"
                     android:textSize="18sp"/>
             </LinearLayout>

             <LinearLayout android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp">
                 <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/dps310_label_data"
                     android:textSize="18sp"/>
                 <Space android:layout_width="5dp"
                     android:layout_height="wrap_content"/>
                 <TextView android:id="@+id/dps310_data_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/no_data"
                     android:textSize="18sp"/>
             </LinearLayout>

             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <LinearLayout android:orientation="horizontal"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
                     <TextView android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/setgetpower_label_data"
                         android:textSize="18sp"/>
                     <Space android:layout_width="5dp"
                         android:layout_height="wrap_content"/>
                     <TextView android:id="@+id/powerget_data_value"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/no_data"
                         android:textSize="18sp"/>
                 </LinearLayout>

                 <LinearLayout android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
                     <TextView android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/smokepower_label_data"
                         android:textSize="18sp"/>
                     <Space android:layout_width="5dp"
                         android:layout_height="wrap_content"/>
                     <TextView android:id="@+id/smokepower_value"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/no_data"
                         android:textSize="18sp"/>
                 </LinearLayout>

             </LinearLayout>

             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <LinearLayout android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
                     <TextView android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/batter_label_data"
                         android:textSize="18sp"/>
                     <Space android:layout_width="5dp"
                         android:layout_height="wrap_content"/>
                     <TextView android:id="@+id/batterlevel_data_value"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/no_data"
                         android:textSize="18sp"/>
                 </LinearLayout>

                 <LinearLayout android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
                     <TextView android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/label_workmode_recv"
                         android:textSize="18sp"/>
                     <Space android:layout_width="5dp"
                         android:layout_height="wrap_content"/>
                     <TextView android:id="@+id/workmode_value"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/no_data"
                         android:textSize="18sp"/>
                 </LinearLayout>
             </LinearLayout>


             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <LinearLayout android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
                     <TextView android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/smokeenergy_label_data"
                         android:textSize="18sp"/>
                     <Space android:layout_width="5dp"
                         android:layout_height="wrap_content"/>
                     <TextView android:id="@+id/smokeenergy_data_value"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/no_data"
                         android:textSize="18sp"/>
                 </LinearLayout>

                 <LinearLayout android:orientation="horizontal"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
                     <TextView android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/usedenergy_label_data"
                         android:textSize="18sp"/>
                     <Space android:layout_width="5dp"
                         android:layout_height="wrap_content"/>
                     <TextView android:id="@+id/UsedEnergy_data_value"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/no_data"
                         android:textSize="18sp"/>
                 </LinearLayout>

             </LinearLayout>


             <LinearLayout android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp">

                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_weight="2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content">
                     <Button
                         android:id="@+id/send_locking_btn"
                         android:text="锁定"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <Button
                         android:id="@+id/send_unlock_btn"
                         android:text="解锁"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>

                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_weight="3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content">

                     <EditText
                         android:id="@+id/setpower_data"
                         android:hint="0.0"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <Button
                         android:id="@+id/plus_power_btn"
                         android:text="+"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <Button
                         android:id="@+id/inc_power_btn"
                         android:text="-"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />

                 </LinearLayout>

             </LinearLayout>

             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
                     android:id="@+id/ready_send_data"
                     android:layout_weight="2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:hint="请输入要发送的数据" />

                 <Button
                     android:id="@+id/send_btn"
                     android:text="发送数据"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />

             </LinearLayout>

         </LinearLayout>

             <ExpandableListView
                 android:id="@+id/gatt_services_list"
                 android:layout_below="@id/data_layout"
                 android:layout_above="@id/layout_below_group"
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />

             <com.example.android.bluetoothlegatt.LineView
                 android:id="@+id/LineView"
                 android:layout_below="@id/data_layout"
                 android:layout_above="@id/layout_below_group"
                 android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="140dp" />

         <LinearLayout
             android:orientation="horizontal"
             android:id="@+id/layout_below_group"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btn_mode_btn"
                 android:text="切换图表"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <Space android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"/>
             <Button
                 android:id="@+id/list_mode_start_btn"
                 android:text="功能2"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>

</RelativeLayout>


